public interface Appareil
{
    public void allumer();

    public void eteindre();
}
